--- a/employee/src/app/app.component.html
+++ b/employee/src/app/app.component.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <app-navbar></app-navbar>
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <router-outlet></router-outlet>
 </body>
 </html>
