--- a/employee/src/app/components/signin/signin.component.css
+++ b/employee/src/app/components/signin/signin.component.css
@@ -1,21 +1,3 @@
-.navbar{
-    background: #3d3dff !important;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-.add-emp-btn{
-    width: 169px;
-    text-align: center;
-    margin-right: 25px;
-    background: white;
-    border: none;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 2px;
-    font-weight: 500;
-    letter-spacing: 1px;
-}
-
 .login-with-google-btn {
     margin: auto;
     justify-content: center;
@@ -62,12 +44,16 @@
       cursor: not-allowed;
     }
   }
-  
 
-@media screen and (max-width: 500px) {
-  .add-emp-btn{
+.signin-container{
     margin: auto;
-    display: flex;
-    margin-top: 32px;
-  }
+    text-align: center;
+    background: #f4f1f1;
+    width: fit-content;
+    padding-top: 20px;
+    padding-right: 70px;
+    padding-left: 70px;
+    padding-bottom: 20px;
+    margin-top: 20px;
+    border-radius: 8px;
 }
